--- a/org/agenda.org
+++ b/org/agenda.org
@@ -977,7 +977,7 @@ are able to *cite* your references.
    #+end_src
 
    #+RESULTS:
-   : OJ VC 
+   : OJ VC
    : 30 30
    : [1] 30
 
@@ -1004,7 +1004,7 @@ are able to *cite* your references.
 
    #+RESULTS:
    [[file:../img/geyser.png]]
-   
+
    #+begin_src R :file ../img/geyser1.png :results graphics file
      boxplot(y,
              data=faithful,
@@ -1022,7 +1022,7 @@ are able to *cite* your references.
    #+end_src
 
    #+RESULTS:
-   :    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+   :    Min. 1st Qu.  Median    Mean 3rd Qu.    Max.
    :   69.00   77.00   81.00   81.02   84.00   96.00
 
 ** Example: Basketball players
@@ -1059,7 +1059,7 @@ are able to *cite* your references.
      lot higher, but sometimes a lot lower. We pick player A because
      he plays more consistently and usually scores higher than B.
   #+end_notes
-  
+
 ** Lecture/practice: measures of spread
 #+attr_html: :width 400px
 [[../img/lecture.jpeg]]
@@ -1092,9 +1092,11 @@ are able to *cite* your references.
 
 * Review: measures of spread
 
+*Think about your answer or compute in R*
+
 1) Which measure of centrality corresponds to the IQR?
    #+begin_quote
-   The median is the corresponding measure of central tendency. 
+   The median is the corresponding measure of central tendency.
    #+end_quote
 
 2) Is the IQR more or less robust as a measure of spread than the
@@ -1105,21 +1107,106 @@ are able to *cite* your references.
    sample average, which is vulnerable against outliers.
    #+end_quote
 
-2) Use ~tapply~ to compute the interquartile range of the ~len~ variable
+3) Use ~tapply~ to compute the interquartile range of the ~len~ variable
    of the pre-loaded ~ToothGrowth~ data set for both values of ~supp~.
    #+begin_src R
      tapply(X=ToothGrowth$len, INDEX=ToothGrowth$supp, FUN=IQR)
    #+end_src
 
-3) How would you compute the IQR of ~len~ for both values of ~supp~
+   #+RESULTS:
+   :   OJ   VC
+   : 10.2 11.9
+
+4) How would you compute the IQR of ~len~ for both values of ~supp~
    without ~tapply~?
    #+begin_src R
      IQR(ToothGrowth$len[ToothGrowth$supp=="OJ"])
      IQR(ToothGrowth$len[ToothGrowth$supp=="VC"])
    #+end_src
 
-4) 
+5) What does this result mean in practice?
+   #+begin_quote
+   - The IQR is the "spread of the middle 50% of all values", or the
+     width/height of the horizontal/vertical box plot.
+   - The middle 50% of all length measurements recorded in ~len~ is
+     slightly larger for a supply of vitamin C than orange juice.
+   - The teeth of Guinea pigs fed with vitamin C instead of orange
+     juice show a slightly greater spread of recorded tooth length.
+   #+end_quote
 
+6) How would you create a box-and-whiskers plot of for both values of
+   ~supp~?
+   #+begin_src R :results graphics file :file ../img/supp.png :exports both
+     supply <- ToothGrowth$supp
+     tg_len <- ToothGrowth$len
+     boxplot(
+       tg_len[supply=="OJ"],
+       tg_len[supply=="VC"],
+       horizontal=TRUE,
+       names=c("Orange Juice", "Vitamin C"),
+       main="len in data set ToothGrowth")
+   #+end_src
+
+   #+RESULTS:
+   [[file:../img/supp.png]]
+
+* "Cutting through the crap" with ~cut~
+
+Preview of assignment 7: using ~cut~ to create categories from a numeric
+variable:
+- You can use ~tapply~ to apply any function ~FUN~ to a data set ~X~ using a
+  factor variable as the ~INDEX~
+- With ~cut~, you can create such an ~INDEX~ factor vector from any
+  numeric variable in your data set ~X~
+- Example: the ~Nile~ data set
+  
+  1. Check the range of values and choose breaks
+     #+begin_src R
+       min(Nile)
+       max(Nile)
+       seq(456,1370,by=100)
+     #+end_src
+  2. Use ~cut~ to define new categories
+     #+begin_src R
+       nilecat <- cut(x=Nile,
+                      breaks=
+                        seq(from=456, to=1370, by=200),
+                      right=F,
+                      include.lowest=TRUE)
+       levels(nilecat)
+     #+end_src
+
+     #+RESULTS:
+     : [1] "[456,656)"           "[656,856)"           "[856,1.06e+03)"     
+     : [4] "[1.06e+03,1.26e+03]"
+  3. Use ~tapply~ to split the data set according to the ~nilecat~
+     categories and compute the sample mean and standard deviation
+     on each segment:
+     #+begin_src R :results silent
+       avg <- tapply(X=Nile, INDEX=nilecat, FUN=mean)
+       std <- tapply(X=Nile, INDEX=nilecat, FUN=sd)
+     #+end_src
+  4. Plot the results with ~plot~ and write the result to ~nilecat.png~
+     #+begin_src R :results graphics file :file ../img/nilecat.png
+       par(mfrow=c(2,1), pty='s')
+       barplot(avg,horiz=TRUE,cex.names=0.7,las=1, col="steelblue")
+       title("Nile averages")
+       barplot(std,horiz=TRUE,cex.names=0.7,las=1, col="red")
+       title("Nile standard deviations")
+     #+end_src    
+
+     #+RESULTS:
+     [[file:../img/nilecat.png]]
+
+     #+begin_src R :results graphics file :file ../img/nilehist.png
+       par(mfrow=c(1,1))
+       library(MASS)
+       truehist(Nile)
+       title("True histogram of Nile")
+     #+end_src    
+
+     #+RESULTS:
+     [[file:../img/nilehist.png]]
 
 * The power of correlations
 #+attr_html: :width 400px
@@ -1139,7 +1226,7 @@ Commit Monstrous Acts"
 - [ ] Which aspects of ethical decisions are missing from the
   experiment and from the interpretation?
 
-- *Discuss with your neighbor(s) and prepare short statements* 
+- *Discuss with your neighbor(s) and prepare short statements*
 
 #+begin_notes
 - Some limitations include: sample, time pressure, fake setup
@@ -1169,7 +1256,7 @@ Commit Monstrous Acts"
   ~#+PROPERTY: header-args:R :session *R* :results output~
 
 - Start the file proper with a new headline using ~*~
-  
+
 * Week 11-15: plotting, probability, distributions
 * References
 #+attr_html: :width 500px
@@ -1179,5 +1266,3 @@ Lawlor J, Banville F, Forero-Muñoz N-R, Hébert K, Martínez-Lanfranco
 JA, Rogy P, et al. (2022) Ten simple rules for teaching yourself
 R. PLoS Comput Biol 18(9):
 e1010372. https://doi.org/10.1371/journal.pcbi.1010372
-
-  
