--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1080,7 +1080,7 @@ are able to *cite* your references.
 ** [[https://lyon.instructure.com/courses/655/assignments/3247/edit?quiz_lti][Test 7: Measures of spread]] (Oct 18)
 ** [[https://lyon.instructure.com/courses/655/assignments/3207][Assignment 6: Measures of spread]] (Oct 25)
 ** [[https://lyon.instructure.com/courses/655/assignments/3246/edit?quiz_lti][Test 8: Central limit theorem/statistical tests]] (Oct 25)
-* Week 10: correlations, outliers
+* Week 10: correlations and outliers
 #+attr_html: :width 400px
 [[../img/milgram.jpg]]
 
